syntax = "proto3";

//protoc --go_out=plugins=grpc:. *.proto
//go:generate mockgen -source=./user.pb.go -destination=../test/mock_UserService/UserServiceMock.go
package fileService;

message LetterId{
  uint64 id = 1;
}

message File{
  string fileType = 2;
  bytes content = 3;
}

message User{
  string email = 1;
}

message Avatar{
  string email = 1;
  string fileName = 2;
  bytes content = 3;
}

message Nothing {
  bool dummy = 1;
}

message Files{
  uint64 letterId = 1;
  repeated File files = 2;
}

service FileService{
  rpc SetAvatar(Avatar) returns (Nothing);
  rpc GetAvatar(User) returns (Avatar);
  rpc SaveFiles(Files) returns (Nothing);
  rpc GetFiles(LetterId) returns(Files);
}